# OpenGLPractice

./: CMakeLists.txt  main.cpp  matrixTest.cpp
include/: compile_shader_program.h  cube.h  image_load.h  triangle.h
include/glad/: glad.h
src/: compile_shader_program.cpp  cube.cpp  glad.c  glad_linux.c  image_load.cpp  triangle.cpp
